test/compilable/diag13110.d
/*
REQUIRED_ARGS: -run
TEST_OUTPUT:
---
OK
---
*/
void main()
{
    import std.stdio;
    writeln("OK");
}
